[package]
name = "aomi-forge"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# Internal crates (defined at workspace level)
aomi-chat.workspace = true
aomi-mcp.workspace = true
aomi-tools.workspace = true
aomi-scripts.workspace = true
aomi-rag.workspace = true
baml-client.workspace = true

# Async and streaming
async-stream = "0.3.6"
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
futures.workspace = true

# Rig framework
rig-core = { workspace = true, features = ["rmcp"] }
rig-derive = "0.1.4"
rmcp = { workspace = true, features = ["client", "reqwest", "transport-streamable-http-server", "transport-streamable-http-client"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
eyre.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
colored.workspace = true
chrono.workspace = true
hex = "0.4.3"

# Foundry integration
foundry-common.workspace = true
alloy.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-transport.workspace = true
cast.workspace = true
